Attachment list not printed when printing multiple messages or single message with message pane hidden
Categories
(Thunderbird :: General, defect, P2)
Tracking
(thunderbird_esr91 verified, thunderbird95 verified)
People
(Reporter: thomas8, Assigned: darktrojan)
References
(Regression, )
Details
(Keywords: regression)
Attachments
(1 file, 2 obsolete files)
|
2.74 KB,
patch
|
darktrojan
:
review+
wsmwk
:
approval-comm-beta+
wsmwk
:
approval-comm-esr91+
|
Details | Diff | Splinter Review |
+++ This bug was initially created as a clone of Bug #1737730 +++
Seen on beta, 95.0b3 (64-bit)
STR
- Print multiple messages which have some attachments
- Print single message with message pane hidden (F8)
Actual result
- Attachment list not printed at the end of each message
Expected result
- Print attachment list at the end of each message
- Keep printing of messages with message pane hidden enabled.
(In reply to Rachel Martin from bug 1737730 comment #11)
This doesn't print the list of attachments. Trying to debug this, we noticed that a debug build crashes here:
https://searchfox.org/mozilla-central/rev/df6434d2ebfdf2b5f89f205fc81d60d64a774fe1/toolkit/components/windowwatcher/nsWindowWatcher.cpp#1039
(In reply to Rachel Martin from bug 1737730 comment #12)
Looks like the patch here also enables printing when the preview is switched off:
https://hg.mozilla.org/comm-central/rev/e66077010600#l3.69
In that case the attachment list is also not printed.
| Reporter | ||
Updated•4 years ago
|
| Reporter | ||
Comment 1•4 years ago
•
|
||
Rachel Martin's patch from bug 1737730 comment #15:
https://github.com/Betterbird/thunderbird-patches/blob/main/91/bugs/1737730-attachment-list-printing.patch
Pls cite this URL in the commit message to credit them.
| Reporter | ||
Updated•4 years ago
|
Updated•4 years ago
|
Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/47afbf2a379e
Always output the attachment list for printing, even if message isn't displayed. r=darktrojan
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 3•4 years ago
|
||
[Approval Request Comment]
Regression caused by (bug #): bug 1737730
User impact if declined: list of attachments isn't printed when printing >1 message
Testing completed (on c-c, etc.): landed yesterday
Risk to taking this patch (and alternatives if risky): low
Comment 4•4 years ago
|
||
Comment on attachment 9251256 [details] [diff] [review]
1741282-print-attachments.diff
[Triage Comment]
Approved for beta
Comment 5•4 years ago
|
||
Comment on attachment 9251256 [details] [diff] [review]
1741282-print-attachments.diff
[Triage Comment]
I noticed a regression from this. Reply/forward of all mails having attachments (e.g. eml or pgp keys) adds an Attachment section at the bottom of the quote. This is quite ugly.
Comment 6•4 years ago
|
||
Comment 7•4 years ago
|
||
We only see the unwanted attachment list inside the quote, not for forward. This hunk should take care of this issue:
https://github.com/Betterbird/thunderbird-patches/blob/6eb66c74152edf9a4800a17a1f5dc75a383c2fe2/91/bugs/1737730-attachment-list-printing.patch#L52
Comment 8•4 years ago
|
||
Retesting, it does seem only replies were affected yes.
| Assignee | ||
Comment 9•4 years ago
|
||
Comment 10•4 years ago
|
||
Please don't forget to change the bug number in the patch.
| Assignee | ||
Comment 11•4 years ago
|
||
Comment 12•4 years ago
|
||
Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/1b456c77c279
Always output the attachment list for printing, even if message isn't displayed. r=darktrojan
| Assignee | ||
Comment 13•4 years ago
|
||
Comment on attachment 9252210 [details] [diff] [review]
1741282-print-attachments-3.diff
[Approval Request Comment]
Regression caused by (bug #): bug 1737730 but part of a bigger regression really
User impact if declined: attachment list doesn't get printed
Testing completed (on c-c, etc.): landed today
Risk to taking this patch (and alternatives if risky): moderate
Comment 14•4 years ago
|
||
Comment on attachment 9252210 [details] [diff] [review]
1741282-print-attachments-3.diff
[Triage Comment]
Approved for beta (even with moderate risk)
Comment 15•4 years ago
|
||
| bugherder uplift | ||
Thunderbird 95.0b5:
https://hg.mozilla.org/releases/comm-beta/rev/c72b4db955da
Comment 16•4 years ago
|
||
Comment on attachment 9252210 [details] [diff] [review]
1741282-print-attachments-3.diff
[Triage Comment]
Approved for esr91 (beta doesn't ship till tomorrow, but let's be optimistic - if it doesn't work out we can backout and rebuild)
Comment 17•4 years ago
|
||
| bugherder uplift | ||
Thunderbird 91.4.0:
https://hg.mozilla.org/releases/comm-esr91/rev/05fcc2ddf05f
Comment 18•4 years ago
|
||
Verified in testing 91.4.0 and 95.0b5 on Windows 10 and Fedora 35 Workstation Linux.
Description
•