Bug 1741282 - Always output the attachment list for printing, even if message isn't displayed. r=darktrojan From https://github.com/Betterbird/thunderbird-patches/blob/6eb66c74152edf9a4800a17a1f5dc75a383c2fe2/91/bugs/1737730-attachment-list-printing.patch

--HG--
extra : amend_source : d3a2652356ee4d8a4d5beaff51b0816372a73486
extra : histedit_source : f879159c747c5c910e1d2d41a5243796a331ad86